--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,9 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
 RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+
+
+/* Saytı www yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+RewriteEngine On
+RewriteCond %{HTTP_HOST} !^www\.texnoloq\.az
+RewriteRule (.*) https://www.texnoloq.az/$1 [R=301,L]
