--- a/.htaccess
+++ b/.htaccess
@@ -7,5 +7,11 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 /* Saytı www yönləndirmə |* Domaini dəyişməyi unutmayın *| */
 RewriteEngine On
-RewriteCond %{HTTP_HOST} !^www\.texnoloq\.az
+RewriteCond %{HTTP_HOST} !^www\.texnoloq\.az$
 RewriteRule (.*) https://www.texnoloq.az/$1 [R=301,L]
+
+
+/* Saytı www olmayan keçidə yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^www\.texnoloq\.az$
+RewriteRule ^(.*)$ http://texnoloq.az/$1 [L,R=301]
