--- a/.htaccess
+++ b/.htaccess
@@ -5,13 +5,23 @@ RewriteCond %{SERVER_PORT} 80
 RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 
+
 /* Saytı www yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+
 RewriteEngine On
 RewriteCond %{HTTP_HOST} !^www\.texnoloq\.az$
 RewriteRule (.*) https://www.texnoloq.az/$1 [R=301,L]
 
 
+
 /* Saytı www olmayan keçidə yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+
 RewriteEngine On
 RewriteCond %{HTTP_HOST} ^www\.texnoloq\.az$
 RewriteRule ^(.*)$ http://texnoloq.az/$1 [L,R=301]
+
+
+
+/* Olmayan keçidi əsas səhifəyə yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+
+ErrorDocument 404 https://texnoloq.az/index.php
