--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-/* http > https yönləndirmə */
+# http > https yönləndirmə
 
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
@@ -6,7 +6,7 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 
 
-/* Saytı www yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+# Saytı www yönləndirmə | Domaini dəyişməyi unutmayın 
 
 RewriteEngine On
 RewriteCond %{HTTP_HOST} !^www\.texnoloq\.az$
@@ -14,7 +14,7 @@ RewriteRule (.*) https://www.texnoloq.az/$1 [R=301,L]
 
 
 
-/* Saytı www olmayan keçidə yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+# Saytı www olmayan keçidə yönləndirmə | Domaini dəyişməyi unutmayın 
 
 RewriteEngine On
 RewriteCond %{HTTP_HOST} ^www\.texnoloq\.az$
@@ -22,6 +22,6 @@ RewriteRule ^(.*)$ http://texnoloq.az/$1 [L,R=301]
 
 
 
-/* Mövcud olmayan keçidləri əsas səhifəyə yönləndirmə |* Domaini dəyişməyi unutmayın *| */
+# Mövcud olmayan keçidləri əsas səhifəyə yönləndirmə | Domaini dəyişməyi unutmayın 
 
 ErrorDocument 404 https://texnoloq.az/index.php
